2016-11-16 Francois Suter <typo3@cobweb.ch>

	* Added mapping for MarkJS, resolves #1
	* Fixed error due to possibly null pid, resolves #3
	* Released version 3.0.1

2016-11-15 Francois Suter <typo3@cobweb.ch>

	* Improved escaping of HTML content in log entries, resolves #2
	* Fixed error due to possibly null IP address (CLI context)

2016-11-13 Francois Suter <typo3@cobweb.ch>

	* Verified compatibility with TYPO3 v8 (8.5.-dev), resolves #78626
	* Corrected awkward default value for IP filtering, resolves #78686
	* Released version 3.0.0

2016-11-09 Francois Suter <typo3@cobweb.ch>

	* Rewrote documentation and moved it to reST, resolves #78504
	* Fixed various bits and pieces, added Composer manifest, resolves #78624

2016-11-01 Francois Suter <typo3@cobweb.ch>

	* Updated and cleaned up the language files, resolves #78528

2016-10-31 Francois Suter <typo3@cobweb.ch>

	* Added an option to visually group rows by run, resolves #78058

2016-10-30 Francois Suter <typo3@cobweb.ch>

	* Restored and improved log clearing feature, resolves #76972
	* Added configuration option to restrict logging to certain keys, resolves #3053

2016-09-04 Francois Suter <typo3@cobweb.ch>

	* Restored column filters in new backend module, resolves #76971

2016-07-09 Francois Suter <typo3@cobweb.ch>

	* New backend module, resolves #76970

2016-07-06 Stefan Froemken <froemken@gmail.com>

	* Move extension configuration to domain model, resolves #73691

2014-12-24 Francois Suter <typo3@cobweb.ch>

	* Add sorting field, resolves #64037

2014-12-15 Francois Suter <typo3@cobweb.ch>

	* Allow for IP filtering, resolves #2859

2014-12-08 Francois Suter <typo3@cobweb.ch>

	* New table structure, new logging utility, database and file writer, resolves #63689
	* Labels for severity levels in extension configuration, resolves #31414

2014-05-21 Francois Suter <typo3@cobweb.ch>

	* Improved page id detection in FE context, resolves #58536
	* Released to TER as version 2.11.2
