@@ -6,6 +6,9 @@
 			<trans-unit id="title" xml:space="preserve">
 				<source>Developer's Log</source>
 			</trans-unit>
+			<trans-unit id="test_plugin" xml:space="preserve">
+				<source>Developer's Log test plugin</source>
+			</trans-unit>
 			<trans-unit id="search" xml:space="preserve">
 				<source>Search</source>
 			</trans-unit>
