@@ -1,0 +1,5 @@
+<html data-namespace-typo3-fluid="true">
+
+<p>This is the Developer's Log test plugin. Some output was written to the log. Check the database!</p>
+
+</html>
