@@ -1,5 +1,5 @@
 <?php
-if (!defined ('TYPO3_MODE')) {
+if (!defined('TYPO3_MODE')) {
     die ('Access denied.');
 }
 
@@ -9,3 +9,17 @@ $GLOBALS['TYPO3_CONF_VARS']['SC_OPTIONS']['t3lib/class.t3lib_div.php']['devLog']
 // Register log writers
 $GLOBALS['TYPO3_CONF_VARS']['EXTCONF']['devlog']['writers']['db'] = \Devlog\Devlog\Writer\DatabaseWriter::class;
 $GLOBALS['TYPO3_CONF_VARS']['EXTCONF']['devlog']['writers']['file'] = \Devlog\Devlog\Writer\FileWriter::class;
+
+// Register test plugin
+\TYPO3\CMS\Extbase\Utility\ExtensionUtility::configurePlugin(
+        'Devlog.' . $_EXTKEY,
+        'TestPlugin',
+        array(
+                'TestPlugin' => 'index',
+
+        ),
+        array(
+                'TestPlugin' => 'index',
+
+        )
+);
