@@ -33,3 +33,11 @@ if (TYPO3_MODE === 'BE') {
             )
     );
 }
+
+// Register test plugin
+\TYPO3\CMS\Extbase\Utility\ExtensionUtility::registerPlugin(
+        $_EXTKEY,
+        'TestPlugin',
+        'LLL:EXT:' . $_EXTKEY . '/Resources/Private/Language/locallang.xlf:test_plugin',
+        'EXT:' . $_EXTKEY . '/Resources/Public/Images/ModuleIcon.svg'
+);
